Fix overflow scrolling bug

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -9,7 +9,7 @@
 
 body {
   background-color: #26262b;
-  min-height: 900px;
+  // min-height: 900px;
   display: flex;
   justify-content: center;
 }
