--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: center;
   overflow: hidden;
+  max-height: 100%;
  }
  
  html body {
