--- a/app/assets/stylesheets/server-form.scss
+++ b/app/assets/stylesheets/server-form.scss
@@ -71,3 +71,13 @@
   font-weight: 700;
   color: #4f5660;
 }
+
+#delete-server-box {
+  width: 100%;
+  height: 40px;
+  background-color: red;
+}
+
+// #delete-server-button {
+
+// }
